[package]
name = "rust-actixweb_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = { version =  "4" }
lazy_static = "1.4.0"
actix-cors = "0.6.3"
sha256 = "1.0.3"